--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -43,6 +43,10 @@ runs:
         echo "::set-output name=branch::$BRANCH"
 
         echo "::endgroup::"
+    - name: Building package
+      shell: bash
+      run: npm run build --if-present
+
     - name: Publish ${{inputs.package}}
       id: publish
       env:
