[gh] add verification step to spec selenium publish wf

--- a/.github/workflows/publish-spec-selenium.yml
+++ b/.github/workflows/publish-spec-selenium.yml
@@ -37,8 +37,8 @@ jobs:
     steps:
       - shell: bash
         run: |
-          npx bongo lint
-          npx bongo verify-changelog
+          yarn install
+          npx bongo release-pre-check --skip-deps --skip-commit --skip-verify-installed-versions
   test:
     needs: [verify]
     strategy:
