--- a/.github/workflows/publish-spec-selenium.yml
+++ b/.github/workflows/publish-spec-selenium.yml
@@ -41,6 +41,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: lts/*
+          registry-url: https://registry.npmjs.org
       - name: Run pre-publish verifications
         shell: bash
         working-directory: ./packages/${{env.PACKAGE_DIR}}
