--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -68,7 +68,7 @@
   "dependencies": {
     "@applitools/eyes-api": "1.1.6",
     "@applitools/eyes-sdk-core": "12.24.12",
-    "@applitools/spec-driver-selenium": "1.3.1",
+    "@applitools/spec-driver-selenium": "1.3.2",
     "@applitools/visual-grid-client": "15.8.59"
   },
   "devDependencies": {
@@ -90,7 +90,7 @@
     "husky": "^4.3.8",
     "mocha": "^9.1.2",
     "prettier": "^2.1.2",
-    "selenium-webdriver": "^4.1.0",
+    "selenium-webdriver": "3",
     "spec-xunit-file": "0.0.1-3",
     "ttypescript": "^1.5.12",
     "typescript": "^4.5.1-rc"
