--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -90,10 +90,10 @@
     "husky": "^4.3.8",
     "mocha": "^9.1.2",
     "prettier": "^2.1.2",
-    "selenium-webdriver": "3",
+    "selenium-webdriver": "^4.1.1",
     "spec-xunit-file": "0.0.1-3",
     "ttypescript": "^1.5.12",
-    "typescript": "^4.5.1-rc"
+    "typescript": "^4.5.4"
   },
   "peerDependencies": {
     "selenium-webdriver": ">=3.6.0"
